--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -110,16 +110,17 @@
       <input type="submit" value="Invia" class="d-block mx-auto mb-5 bg-primary border-0">
     </form> -->
     <section>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 game">
-          <h1 class="d-block text-center ">Scegli la tua mossa!</h1>
-          <div class="btn-group d-block text-center m-5" role="group">
-            <button type="button" class="btn btn-primary" id="rock">Sasso</button>
-            <button type="button" class="btn btn-primary" id="paper">Carta</button>
-            <button type="button" class="btn btn-primary" id="scissors">Forbice</button>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 game">
+            <h1 class="d-block text-center">Scegli la tua mossa!</h1>
+            <div class="btn-group d-block text-center m-5" role="group">
+              <button type="button" class="btn btn-primary" id="rock">Sasso</button>
+              <button type="button" class="btn btn-primary" id="paper">Carta</button>
+              <button type="button" class="btn btn-primary" id="scissors">Forbice</button>
+            </div>
+            <p class="result d-block text-center risultato" id="result"></p>
           </div>
-          <p class="result d-block text-center risultato" id="result"></p>
         </div>
       </div>
     </section>
